[tool.poetry]
name = "nonebot_plugin_asoulcnki"
version = "0.1.4"
description = "ASoulCnki plugin for Nonebot2"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = ">=2.0.0-alpha.15, <2.0.0-beta.1"
nonebot-adapter-cqhttp = ">=2.0.0-alpha.15, <2.0.0-beta.1"
nonebot-plugin-htmlrender = ">=0.0.1"
httpx = ">=0.19.0"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
